<resources>
    <string name="app_name">FrameTemp Monitor</string>
    <!-- Main Activity -->
    <string name="frames_per_second">Frames per Second: %.1f</string>
    <string name="battery_temp">Battery temperature: %.1f\u00B0C</string>
    <string name="cpu_temp">CPU temperature: %.1f\u00B0C</string>
    <string name="overlay_off">Enable Overlay</string>
    <string name="overlay_on">Disable Overlay</string>
    <string name="saving_off">Save Data</string>
    <string name="saving_on">Stop Saving</string>
    <string name="nav_data_activity">See Saved Data</string>
    <string name="fab_settings">Open settings menu</string>

    <!-- OverlayService -->
    <string name="loading">Loading…</string>

    <!-- FrameTempDataActivity -->
    <string name="data_fps">FPS: %.1f—</string>
    <string name="data_battery">BAT: %.1f\u00B0C—</string>
    <string name="data_cpu">CPU: %.1f\u00B0C</string>
    <string name="data_time">TIME: %s</string>
    <string name="fab_delete">Delete saved data</string>

    <!-- Settings Activity -->
    <string name="overlay_header">Overlay Settings</string>
    <string name="fps_show">Track frame rate</string>
    <string name="temp_show">Track battery temperature</string>
    <string name="cpu_show">Track CPU temperature</string>
    <string name="button_show">Show Save button</string>
    <string name="font_show">Overlay font size</string>

    <string name="help_header">Help</string>
    <string name="feedback_send">Send feedback</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>
</resources>