<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" >

    <PreferenceCategory
        app:key="overlay_category"
        app:title="@string/overlay_header">

        <SwitchPreferenceCompat
            app:key="frame_rate"
            app:title="@string/fps_show"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="battery_temperature"
            app:title="@string/temp_show"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="cpu_temperature"
            app:title="@string/cpu_show"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="save_button"
            app:title="@string/button_show"
            app:defaultValue="true"/>

        <ListPreference
            app:key="font_size"
            app:title="@string/font_show"
            app:defaultValue="Medium"
            app:entries="@array/font_entries"
            app:entryValues="@array/font_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>